# pyproject.toml
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pv4u"
version = "0.1.0"
description = "Tiny p4p/PVA sims (motor, chopper)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "p4p>=4.2",
  "numpy<2",
]

[project.scripts]
pv4u-motor = "sim.motor_record:main"
pv4u-chopper = "sim.chopper:main"

[tool.hatch.build.targets.wheel]
# NOTE: the code imports 'common.pva_common', so we ship 'common' and 'sim' as top-level packages.
packages = ["common", "sim"]

[tool.hatch.build.targets.sdist]
include = ["common", "sim", "README.md", "pyproject.toml"]
